[package]
name = "rusty-stager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel32-sys = "0.2.2"
sysinfo = "0.29.10"
reqwest = { version = "0.12.5", features = ["blocking"] }
winapi = { version = "0.3.9", features = ["winnt"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary